correction in the contrast of forms

--- a/css/contato_new.css
+++ b/css/contato_new.css
@@ -22,12 +22,12 @@ h1 {
 }
 
 form span {
-	color: red; 
+	color: #A80000; 
 	font-size: 12px;
 }
 
 .ex {
-	color: gray;
+	color: #575757;
 	font-size: 12px;	
 }
 
